# snake-game

./: .gitignore  AGENTS.md  README.md  openapi.yaml  package-lock.json  package.json
backend/: Makefile  database.py  main.py  models.py  pyproject.toml
backend/routers/: auth.py  leaderboard.py
backend/tests/: README.md  test_api.py
frontend/: package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  App.test.jsx  gameLogic.js  gameLogic.test.js
frontend/src/api/: client.js
frontend/src/components/: AuthModal.jsx  Leaderboard.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/test/: README.md
