[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "uvicorn>=0.38.0",
]
